projects/compiler/test/parser/import_error_list_2nd_underscore.out
Error at %FILE_NAME%:1:11
Unexpected token '_':
  |  import a, _ from "./abc"
               ^